force-app/main/default/objects/Campos_Excel_Economico__mdt/Campos_Excel_Economico__mdt.object-meta.xml
<CustomObject>
    <label>Campos Excel Economico</label>
    <pluralLabel>Campos Excel Economicos</pluralLabel>
</CustomObject>