force-app/main/default/objects/Campos_Excel_Economico__mdt/fields/Campo_Excel__c.field-meta.xml
<CustomField>
    <fullName>Campo_Excel__c</fullName>
    <label>Campo Excel</label>
    <type>TextArea</type>
</CustomField>