force-app/main/default/objects/Campos_Excel_Economico__mdt/fields/Campo_LP__c.field-meta.xml
<CustomField>
    <fullName>Campo_LP__c</fullName>
    <label>Campo LP</label>
    <type>TextArea</type>
</CustomField>