force-app/main/default/objects/Campos_Excel_Economico__mdt/fields/OrdenColumna__c.field-meta.xml
<CustomField>
    <fullName>OrdenColumna__c</fullName>
    <label>OrdenColumna</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>